--- a/package.json
+++ b/package.json
@@ -363,12 +363,14 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@vscode/extension-telemetry": "^1.2.0",
     "js-tiktoken": "^1.0.10",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "semver": "^7.7.3"
   },
   "devDependencies": {
     "@types/jsdom": "^27.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/semver": "^7.7.1",
     "@types/vscode": "^1.108.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
