--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -159,7 +159,7 @@ development_status:
   # ============================================================
   # Epic 9: Extensibility & Public API
   # ============================================================
-  epic-9: in-progress
+  epic-9: review
   9-1-define-and-document-illmprovider-extension-interface: review
   9-2-implement-llm-provider-registration-api: review
   9-3-define-and-document-iagentrenderer-extension-interface: review
@@ -171,8 +171,8 @@ development_status:
   # ============================================================
   # Epic 10: Documentation & Developer Support
   # ============================================================
-  epic-10: backlog
-  10-1-implement-integrated-getting-started-documentation: backlog
+  epic-10: in-progress
+  10-1-implement-integrated-getting-started-documentation: review
   10-2-implement-searchable-troubleshooting-knowledge-base: backlog
   10-3-create-comprehensive-architecture-documentation-for-contributors: backlog
   10-4-generate-api-documentation-with-code-examples: backlog
