--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -173,7 +173,7 @@ development_status:
   # ============================================================
   epic-10: in-progress
   10-1-implement-integrated-getting-started-documentation: review
-  10-2-implement-searchable-troubleshooting-knowledge-base: backlog
+  10-2-implement-searchable-troubleshooting-knowledge-base: review
   10-3-create-comprehensive-architecture-documentation-for-contributors: backlog
   10-4-generate-api-documentation-with-code-examples: backlog
   10-5-implement-clear-error-messages-with-documentation-links: backlog
