--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -177,6 +177,6 @@ development_status:
   10-3-create-comprehensive-architecture-documentation-for-contributors: review
   10-4-generate-api-documentation-with-code-examples: review
   10-5-implement-clear-error-messages-with-documentation-links: review
-  10-6-create-detailed-changelog-with-contributor-recognition: backlog
-  10-7-implement-contextual-tooltips-throughout-ui: backlog
+  10-6-create-detailed-changelog-with-contributor-recognition: review
+  10-7-implement-contextual-tooltips-throughout-ui: done
   epic-10-retrospective: optional
