--- a/package.json
+++ b/package.json
@@ -174,6 +174,12 @@
         "title": "Search Troubleshooting",
         "category": "AI 101",
         "icon": "$(search)"
+      },
+      {
+        "command": "ai-101-ts.viewChangelog",
+        "title": "View Changelog",
+        "category": "AI 101",
+        "icon": "$(history)"
       }
     ],
     "keybindings": [
@@ -453,7 +459,8 @@
     "test": "vscode-test",
     "test:unit": "vitest run",
     "test:watch": "vitest watch",
-    "docs:generate": "typedoc"
+    "docs:generate": "typedoc",
+    "changelog": "standard-version"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
@@ -463,20 +470,28 @@
     "semver": "^7.7.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@types/chai": "^5.2.3",
     "@types/jsdom": "^27.0.0",
     "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
+    "@types/node": "^20.19.30",
     "@types/semver": "^7.7.1",
+    "@types/sinon": "^21.0.0",
     "@types/vscode": "^1.108.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "axe-core": "^4.8.2",
+    "chai": "^6.2.2",
     "esbuild": "^0.25.12",
     "eslint": "^9.25.1",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
+    "sinon": "^21.0.1",
+    "standard-version": "^9.5.0",
+    "ts-node": "^1.7.1",
     "typedoc": "^0.28.16",
     "typescript": "^5.8.3",
     "vitest": "^4.0.17"
