--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -171,7 +171,7 @@ development_status:
   # ============================================================
   # Epic 10: Documentation & Developer Support
   # ============================================================
-  epic-10: in-progress
+  epic-10: review
   10-1-implement-integrated-getting-started-documentation: review
   10-2-implement-searchable-troubleshooting-knowledge-base: review
   10-3-create-comprehensive-architecture-documentation-for-contributors: review
